--- a/municipios/index.html
+++ b/municipios/index.html
@@ -14,6 +14,7 @@
             Municipios
         </h1>
         <p id="link-home"><a href="../index.html">Ir para home</a></p>
+        <p id="link-home"><a href="../index.html">Ir para home</a></p>
     </header>
     <main>
        <ul id="municipios-list"></ul>
