--- a/municipios/index.html
+++ b/municipios/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Municipios</title>
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
             Municipios
         </h1>
         <p id="link-home"><a href="../index.html">Ir para home</a></p>
-        <p id="link-home"><a href="../index.html">Ir para home</a></p>
+        <p id="link-home"><a href="../favoritos/index.html">Ir para favoritos</a></p>
     </header>
     <main>
        <ul id="municipios-list"></ul>
